--- a/contact.html
+++ b/contact.html
@@ -1,77 +1,89 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="https://kit.fontawesome.com/c587416f9c.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="./CSS/style.css">
-        <title>TRAVEL WEBSITE |WELCOME</title>
-    </head>
-<body>
-    <nav class="navbar bg-dark">
-        <div class="container">
-            <h1 class="logo lg-heading text-light">WT</h1>
-            <ul class="nav-items">
-                <li class="nav-item"><a href="./index.html"class='text-light'>HOME</a></li>
-                <li class="nav-item"><a href="./about.html"class='text-light'>ABOUT</a></li>
-                <li class="nav-item"><a href="./contact.html"class='text-light'>CONTACT</a></li>
-            </ul>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
+    <title>Hello, world!</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">icoder</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link " aria-current="page" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./about.html">About</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                List
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Web Development</a></li>
+                <li><a class="dropdown-item" href="#">coding</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">App Development</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Contact Us</a>
+            </li>
+           
+          </ul>
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
         </div>
+      </div>
     </nav>
-    <section class="contact-form">
-        <div class="container">
-           <div class="form-wrapper">
-            <div class="company-address">
-                <div class="address-group">
-                <i class="fa fa-map-marker-alt fa-3x text-red"> </i>
-                 <h2 class="text-grey md-heading">Location</h2>
-                 <p>#78,Jinnah Colony, Karachi</p>
-                </div>
-                <div class="address-group">
-                <i class="far fa-envelope fa-3x text-red"></i>
-                 <h2 class="text-grey md-heading">E-mail</h2>
-                 <p>ahm@gmail.com</p>
-                
-                </div>
-                <div class="address-group">
-                <i class="fas fa-phone-square fa-3x text-red"></i>
-                 <h2 class="text-grey md-heading">Phone</h2>
-                 <p>1354655400101</p>
-               </div>
-               <img src="./img/pexels-sevenstorm-juhaszimrus-443399.jpg" alt="company image">
-            </div>
-            <form action="" class="form">
-                <h1 class="lg-heading text-black">Contact Us </h1>
-                <p class="text-grey">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam vitae repellat dolores commodi placeat obcaecati, sapiente quaerat explicabo eum accusantium.</p>
-                <div class="form-group">        
-                  <label for="username">Username</label>
-                  <input type="text" name="name" id="name" required>  
-                </div>
-                <div class="form-group">
-                    <label for="E-mail">E-mail</label>
-                    <input type="email" name="" id="E-mail" required>
-                </div>
-                <div class="form-group">
-                    <label for="Phone">Phone</label>
-                    <input type="text" name="" id="phone" required>
-                </div>
-                <div class="form-group">
-                    <label for="Message">Message</label>
-                    <textarea name="message" id="message" cols="30" rows="10"></textarea>
-                </div>
-                <button type="submit" class="form-btn">Submit</button>
-            </form>
-           </div>
-        </div>
-    </section>
-    <footer class="footer">
-        <div class="social-media-links">
-            <i class="fa-brands fa-facebook fa-3x"></i>
-            <i class="fa-brands fa-twitter fa-3x"></i>
-            <i class="fa-brands fa-instagram fa-3x"></i>
-        </div>
-        <p>World Travel &copy; 2023, All Right Reserved</p>
-    </footer>
-</body>
+    <!-- ################################################## 1st container###################### -->
+<div class="container">
+ <h2> Contact US</h2>
+ <div class="mb-3">
+    <label for="formFile" class="form-label"  >Default file input example</label>
+    <input class="form-control" type="file" id="formFile">
+  </div>
+  <div class="mb-3">
+    <label for="formFileMultiple" class="form-label">Multiple files input example</label>
+    <input class="form-control" type="file" id="formFileMultiple" multiple>
+  </div>
+  <div class="mb-3">
+    <label for="formFileDisabled" class="form-label">Disabled file input example</label>
+    <input class="form-control" type="file" id="formFileDisabled" disabled>
+  </div>
+  <div class="mb-3">
+    <label for="formFileSm" class="form-label">Small file input example</label>
+    <input class="form-control form-control-sm" id="formFileSm" type="file">
+  </div>
+  <div>
+    <label for="formFileLg" class="form-label">Large file input example</label>
+    <input class="form-control form-control-lg" id="formFileLg" type="file">
+  </div>
+  <button type="submit" class="btn btn-primary my-1">submit</button>
+</div>
+   
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    -->
+  </body>
 </html>
