--- a/index.html
+++ b/index.html
@@ -1,80 +1,240 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/c587416f9c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./CSS/style.css">
-    <title>TRAVEL WEBSITE |WELCOME</title>
-</head>
-<body>
-    <header class="header">
-        <nav class="navbar">
-            <div class="container">
-                <h1 class="logo lg-heading text-light main-heading">WT</h1>
-                <ul class="nav-items">
-                    <li class="nav-item"><a href="./index.html"class='text-light'>HOME</a></li>
-                    <li class="nav-item"><a href="./about.html"class='text-light'>ABOUT</a></li>
-                    <li class="nav-item"><a href="./contact.html"class='text-light'>CONTACT</a></li>
-                </ul>
-            </div>
-        </nav>
-        <div class="header-content">
-            <h1 class="lg-heading text-light heading-2">travel the world</h1>
-            <p class="text-light">Are you Ready To Travel The World, With your dreams and expectations</p>
-            <a href="#explore-places" class="btn btn-primary text-red md-heading">Explore Places</a>
-        </div>
-    </header>
-    <section class="showcase" id="explore-places">
-           <div class="container">
-            <div class="row row1">
-                <div class="img-box"><img src="./img/img-box1.jpg.jpg" alt="Image des"> </div>
-                <div class="text-box">
-                    <h1 class="lg-heading">deganvy, u.k</h1> 
-                    <p class="row-p text-grey"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid atque temporibus impedit ducimus eveniet odio tempore officiis debitis maxime minima et voluptatibus ipsam, aperiam culpa explicabo possimus dolor voluptates quae.</p>
-                    <a href="#" class="btn btn-secondary text-red " >MORE</a>
-                     </div>
-            </div>
-            <div class="row row2">
-                <div class="img-box"> <img src="./img/img-box2.jpg.jpg" alt="Image des"></div>
-                <div class="text-box">
-                    <h1 class="lg-heading">desert, egypt</h1>
-                    <p class="row-p text-grey">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat architecto atque accusamus omnis. Beatae minus fugit quis magnam culpa a. Fuga quod sunt cum incidunt consectetur. Voluptas suscipit error quam.</p>
-                    <a href="#" class="btn btn-secondary text-red" >MORE</a>
-                </div>
-            </div>
-           </div>
-    </section>
-    <section class="features">
-        <div class="container">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-            <div class="box-wraper">
-             <div class="box box-1">
-                <i class="fa-solid fa-route fa-2x text-red"></i>
-               <h2 class="md-heading">Adventurous</h2>
-               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed aspernatur beatae ratione atque minima nobis quas similique molestiae fuga quidem.</p>
-             </div>
-             <div class="box box-2">
-                <i class="fa-solid fa-strikethrough fa-2x"></i>
-                 <h2 class="md-heading">Less Price</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed aspernatur beatae ratione atque minima nobis quas similique molestiae fuga quidem.</p> 
-             </div>
-             <div class="box box-3">
-                <i class="fa-solid fa-user-check fa-2x text-red"></i>
-              <h2 class="md-heading">Experience</h2>
-             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed aspernatur beatae ratione atque minima nobis quas similique molestiae fuga quidem.</p>
-             </div>
-            </div> 
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
+    <title>Hello, world!</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">icoder</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./about.html">About</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                List
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Web Development</a></li>
+                <li><a class="dropdown-item" href="#">coding</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">App Development</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contact.html">Contact Us</a>
+            </li>
+           
+          </ul>
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-light" type="submit">Search</button>
+          </form>
+          <div class="mx-2">
+            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
+            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#signupModal">SignUp</button>
+          </div>
         </div>
-    </section>
-    <footer class="footer">
-        <div class="social-media-links">
-            <i class="fa-brands fa-facebook fa-3x"></i>
-            <i class="fa-brands fa-twitter fa-3x"></i>
-            <i class="fa-brands fa-instagram fa-3x"></i>
+      </div>
+     
+    </nav>
+    <!-- ######################### login modal ####################### -->
+   <!-- Button trigger modal -->
+
+
+<!-- Modal -->
+<div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="loginModalLabel">Welcome to icoder</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
         </div>
-        <p>World Travel &copy; 2023, All Right Reserved</p>
-    </footer>
-</body>
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+    <!-- ############################### sign up modal ################################ -->
+    <!-- Button trigger modal -->
+
+<!-- Modal -->
+<div class="modal fade" id="signupModal" tabindex="-1" aria-labelledby="signupModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="signupModalLabel">Get an icoder Account</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+    <!-- ######################################### -->
+   
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./images/1st.jpg.jpg" class="d-block w-100 img" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h2>Welome To icoder</h2>
+            <p>Technology, News, Development And Trends</p>
+            <button type="button" class="btn btn-danger">Technology</button>
+            <button type="button" class="btn btn-primary">Web Development </button>
+            <button type="button" class="btn btn-success">Tech Fun</button>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./images/2nd.jpg.jpg" class="d-block w-100 img" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h2>The Best Coding Blog</h2>
+            <p>Technology, News, Development And Trends</p>
+            <button type="button" class="btn btn-danger">Technology</button>
+            <button type="button" class="btn btn-primary">Web Development </button>
+            <button type="button" class="btn btn-success">Tech Fun</button>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./images/3rd.jpg.jpg" class="d-block w-100 img" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h2>Award Wining Blog</h2>
+            <p>Technology, News, Development And Trends</p>
+            <button type="button" class="btn btn-danger">Technology</button>
+            <button type="button" class="btn btn-primary">Web Development </button>
+            <button type="button" class="btn btn-success">Tech Fun</button>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <!-- ############################################# CARDS ######################################### -->
+    <div class="container my-4">
+    <div class="row mb-2">
+      <div class="col-md-6">
+        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col p-4 d-flex flex-column position-static">
+            <strong class="d-inline-block mb-2 text-primary">World</strong>
+            <h3 class="mb-0">Featured post</h3>
+            <div class="mb-1 text-muted">Nov 12</div>
+            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="stretched-link">Continue reading</a>
+          </div>
+          <div class="col-auto d-none d-lg-block">
+            <img class="bd-placeholder-img" width="200" height="250"src="./images/2nd.jpg.jpg" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col p-4 d-flex flex-column position-static">
+            <strong class="d-inline-block mb-2 text-success">Design</strong>
+            <h3 class="mb-0">Learn Designing</h3>
+            <div class="mb-1 text-muted">Nov 11</div>
+            <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="stretched-link">Continue reading</a>
+          </div>
+          <div class="col-auto d-none d-lg-block">
+            <img class="bd-placeholder-img" width="200" height="250" src="./images/FLN.jpg.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+<!-- ################################################### CARDS-2 ##################### -->
+<div class="container my-4">
+  <div class="row mb-2">
+    <div class="col-md-6">
+      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col p-4 d-flex flex-column position-static">
+          <strong class="d-inline-block mb-2 text-primary">World</strong>
+          <h3 class="mb-0">Featured post</h3>
+          <div class="mb-1 text-muted">Nov 12</div>
+          <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="stretched-link">Continue reading</a>
+        </div>
+        <div class="col-auto d-none d-lg-block">
+          <img class="bd-placeholder-img" width="200" height="250"src="./images/1st.jpg.jpg" alt="">
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col p-4 d-flex flex-column position-static">
+          <strong class="d-inline-block mb-2 text-success">Design</strong>
+          <h3 class="mb-0">Learn Designing</h3>
+          <div class="mb-1 text-muted">Nov 11</div>
+          <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="stretched-link">Continue reading</a>
+        </div>
+        <div class="col-auto d-none d-lg-block">
+          <img class="bd-placeholder-img" width="200" height="250" src="./images/3rd.jpg.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    -->
+  </body>
 </html>
